# src/controllers/auth/AuthController.ts
@@ -5,10 +5,10 @@ import { AuthService } from "../../services/auth/AuthService";
 
 class AuthController {
   async handle(request: Request, response: Response) {
-    const { document, password, role }: LoginRequest = request.body;
+    const { document, password }: LoginRequest = request.body;
 
     const authService = new AuthService(new AuthRepository());
-    const result = await authService.execute({ document, password, role });
+    const result = await authService.execute({ document, password });
 
     return response.status(200).json(result);
   }
